--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 /* Default CSS */
-
 html, body, #root, .root-child {
   height: 100%;
 }
 
 body {
   margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
   font-size: 16px;
   overflow-x: hidden;
+  
 }
 
 #root {
@@ -39,4 +41,17 @@ button:focus {
 input:focus,
 textarea:focus {
   outline: none;
+}
+
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.row > div {
+  padding: 0;
+}
+
+.container-fluid {
+  padding: 0;
 }
